[package]
name = "serv-executor"
version = "0.1.0"
authors = ["AselSiriwardena <aselindula@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0.114"
simple-logging = "2.0.2"
log = "0.4.8"
pam = "0.7.0"
nix = "0.17.0"
libc = "0.2"
